--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "node": "12.x"
   },
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -25,7 +24,6 @@
     "css-loader": "0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "live-server": "^1.2.1",
     "moment": "^2.27.0",
     "node-sass": "4.14.1",
     "normalize.css": "^8.0.1",
@@ -41,7 +39,9 @@
     "style-loader": "0.18.2",
     "uuid": "^8.2.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
     "webpack-dev-server": "2.5.1"
   }
 }
