--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^7.18.0",
     "moment": "^2.27.0",
     "node-sass": "4.14.1",
     "normalize.css": "^8.0.1",
@@ -36,6 +37,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "^8.2.0",
@@ -43,6 +45,7 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "webpack-dev-server": "2.5.1"
   }
 }
