--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
